# opengl-pixel-horror

./: README.md
coms-4160-shader-pipeline/: .gitmodules  CMakeLists.txt  main.cpp
coms-4160-shader-pipeline/data/: final-project.json  test-08.json
coms-4160-shader-pipeline/eigen/: CMakeLists.txt
coms-4160-shader-pipeline/glad/: CMakeLists.txt
coms-4160-shader-pipeline/include/: camera.h  object.h  plane.h
coms-4160-shader-pipeline/libigl/: CMakeLists.txt
coms-4160-shader-pipeline/libigl/cmake/: LibiglDownloadExternal.cmake
coms-4160-shader-pipeline/src/: 5.tcs  blinn_phong.glsl  blue_and_gray.fs  bump.fs  bump_height.glsl  bump_position.glsl  camera.cpp  identity.glsl  improved_perlin_noise.glsl  improved_smooth_step.glsl  interpolate.glsl  lit.fs  model.glsl  model_view_projection.vs  object.cpp  pass-through.tes  pass-through.vs  per_vertex_normals.cpp  perlin_noise.glsl  plane.cpp  planet.fs  procedural_color.fs  random_direction.glsl  rotate_about_y.glsl  shader.fs  smooth_step.glsl  snap_to_sphere.tes  tangent.glsl  translate.glsl  triangle_area_normal.cpp
